# lifeops-nepal

./: .env.example  .gitignore  README.md  pyproject.toml
src/: graph.py
src/agents/: state.py  utils.py
src/agents/nodes/: Creative.py  Orchestrator.py  Reminder.py
src/config/: settings.py
src/mcp/: client.py
src/mcp/servers/: comms.py  moodboard.py  travel.py
